# libwhp

./: .gitattributes  .gitignore  Cargo.toml  README.md
examples/: demo.rs
examples/payload/: Makefile  handler.asm  helpers.c  helpers.h  interrupt.h  payload.c  payload.ld
src/: common.rs  common_defs.rs  debug.rs  instruction_emulator.rs  interrupts.rs  lib.rs  macros.rs  memory.rs  platform.rs  whp.rs  whp_emulator.rs  win_hv_emulation.rs  win_hv_emulation_defs.rs  win_hv_platform.rs  win_hv_platform_defs.rs  win_hv_platform_defs_internal.rs  win_memory.rs  x86_64.rs
