[package]
name = "libwhp"
version = "0.1.4"
authors = ["Alessandro Pilotti <apilotti@cloudbasesolutions.com>",
           "Jenny Mankin <jenny.mankin@crowdstrike.com"]
repository = "https://github.com/insula-rs/libwhp"
license = "Apache-2.0"
readme = "README.md"
keywords = ["Hyper-V", "WHP", "Windows", "Hypervisor", "Platform"]
description = """
Rust Windows Hypervisor Platform API
"""

[dependencies]
libc = "0.2"
bitflags = "1.0"
byteorder = "=1.2.1"

[lib]
crate-type = ["rlib", "dylib"]
